libneubot.py

#
# LibNeubot interface - Public domain.
# WARNING: Autogenerated file - do not edit!
#

# pylint: disable = C0111, C0103

import _ctypes
import ctypes
import logging
import os
import sys

if sys.platform == "darwin":
    LIBNEUBOT_NAME = "/usr/local/lib/libneubot.dylib.3"
else:
    LIBNEUBOT_NAME = "/usr/local/lib/libneubot.so.3"

LIBNEUBOT = ctypes.CDLL(LIBNEUBOT_NAME)

DIE = getattr(os, '_exit')

NEUBOT_SLOT_VO = ctypes.CFUNCTYPE(None, ctypes.py_object)
NEUBOT_SLOT_VOS = ctypes.CFUNCTYPE(None, ctypes.py_object,
  ctypes.c_char_p)

NEUBOT_HOOK_VO = ctypes.CFUNCTYPE(None, ctypes.py_object)
NEUBOT_HOOK_VOS = ctypes.CFUNCTYPE(None, ctypes.py_object,
  ctypes.c_char_p)



LIBNEUBOT.NeubotEchoServer_construct.restype = ctypes.c_void_p
LIBNEUBOT.NeubotEchoServer_construct.argtypes = (
    ctypes.c_void_p,
    ctypes.c_int,
    ctypes.c_char_p,
    ctypes.c_char_p,
)



LIBNEUBOT.NeubotPollable_construct.restype = ctypes.c_void_p
LIBNEUBOT.NeubotPollable_construct.argtypes = (
    ctypes.c_void_p,
    NEUBOT_SLOT_VO,
    NEUBOT_SLOT_VO,
    NEUBOT_SLOT_VO,
    ctypes.py_object,
)

def NeubotPollable_handle_read_slot_vo(selfptr):
    try:
        selfptr.handle_read()
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLABLE_HANDLE_READ_SLOT_VO = NEUBOT_SLOT_VO(
    NeubotPollable_handle_read_slot_vo
)

def NeubotPollable_handle_write_slot_vo(selfptr):
    try:
        selfptr.handle_write()
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLABLE_HANDLE_WRITE_SLOT_VO = NEUBOT_SLOT_VO(
    NeubotPollable_handle_write_slot_vo
)

def NeubotPollable_handle_error_slot_vo(selfptr):
    try:
        selfptr.handle_error()
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLABLE_HANDLE_ERROR_SLOT_VO = NEUBOT_SLOT_VO(
    NeubotPollable_handle_error_slot_vo
)



LIBNEUBOT.NeubotPollable_attach.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_attach.argtypes = (
    ctypes.c_void_p,
    ctypes.c_longlong,
)



LIBNEUBOT.NeubotPollable_detach.argtypes = (
    ctypes.c_void_p,
)



LIBNEUBOT.NeubotPollable_get_fileno.restype = ctypes.c_longlong
LIBNEUBOT.NeubotPollable_get_fileno.argtypes = (
    ctypes.c_void_p,
)



LIBNEUBOT.NeubotPollable_set_readable.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_set_readable.argtypes = (
    ctypes.c_void_p,
)



LIBNEUBOT.NeubotPollable_unset_readable.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_unset_readable.argtypes = (
    ctypes.c_void_p,
)



LIBNEUBOT.NeubotPollable_set_writable.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_set_writable.argtypes = (
    ctypes.c_void_p,
)



LIBNEUBOT.NeubotPollable_unset_writable.restype = ctypes.c_int
LIBNEUBOT.NeubotPollable_unset_writable.argtypes = (
    ctypes.c_void_p,
)



LIBNEUBOT.NeubotPollable_set_timeout.argtypes = (
    ctypes.c_void_p,
    ctypes.c_double,
)



LIBNEUBOT.NeubotPollable_clear_timeout.argtypes = (
    ctypes.c_void_p,
)



LIBNEUBOT.NeubotPollable_close.argtypes = (
    ctypes.c_void_p,
)



LIBNEUBOT.NeubotPoller_construct.restype = ctypes.c_void_p
LIBNEUBOT.NeubotPoller_construct.argtypes = (
)



LIBNEUBOT.NeubotPoller_sched.restype = ctypes.c_int
LIBNEUBOT.NeubotPoller_sched.argtypes = (
    ctypes.c_void_p,
    ctypes.c_double,
    NEUBOT_HOOK_VO,
    ctypes.py_object,
)

def NeubotPoller_sched_callback_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["callback"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_SCHED_CALLBACK_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_sched_callback_hook_vo
)



LIBNEUBOT.NeubotPoller_defer_read.restype = ctypes.c_int
LIBNEUBOT.NeubotPoller_defer_read.argtypes = (
    ctypes.c_void_p,
    ctypes.c_longlong,
    NEUBOT_HOOK_VO,
    NEUBOT_HOOK_VO,
    ctypes.py_object,
    ctypes.c_double,
)

def NeubotPoller_defer_read_handle_ok_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["handle_ok"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_DEFER_READ_HANDLE_OK_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_defer_read_handle_ok_hook_vo
)

def NeubotPoller_defer_read_handle_timeout_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["handle_timeout"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_DEFER_READ_HANDLE_TIMEOUT_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_defer_read_handle_timeout_hook_vo
)



LIBNEUBOT.NeubotPoller_defer_write.restype = ctypes.c_int
LIBNEUBOT.NeubotPoller_defer_write.argtypes = (
    ctypes.c_void_p,
    ctypes.c_longlong,
    NEUBOT_HOOK_VO,
    NEUBOT_HOOK_VO,
    ctypes.py_object,
    ctypes.c_double,
)

def NeubotPoller_defer_write_handle_ok_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["handle_ok"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_DEFER_WRITE_HANDLE_OK_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_defer_write_handle_ok_hook_vo
)

def NeubotPoller_defer_write_handle_timeout_hook_vo(closure):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["handle_timeout"](closure.opaque)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_DEFER_WRITE_HANDLE_TIMEOUT_HOOK_VO = NEUBOT_HOOK_VO(
    NeubotPoller_defer_write_handle_timeout_hook_vo
)



LIBNEUBOT.NeubotPoller_resolve.restype = ctypes.c_int
LIBNEUBOT.NeubotPoller_resolve.argtypes = (
    ctypes.c_void_p,
    ctypes.c_char_p,
    ctypes.c_char_p,
    NEUBOT_HOOK_VOS,
    ctypes.py_object,
)

def NeubotPoller_resolve_callback_hook_vos(closure, string):
    _ctypes.Py_DECREF(closure)
    try:
        closure.functions["callback"](closure.opaque, string)
    except (KeyboardInterrupt, SystemExit):
        DIE(0)
    except:
        logging.error("Unhandled exception", exc_info=1)
        DIE(1)

NEUBOTPOLLER_RESOLVE_CALLBACK_HOOK_VOS = NEUBOT_HOOK_VOS(
    NeubotPoller_resolve_callback_hook_vos
)



LIBNEUBOT.NeubotPoller_loop.argtypes = (
    ctypes.c_void_p,
)



LIBNEUBOT.NeubotPoller_break_loop.argtypes = (
    ctypes.c_void_p,
)



class NeubotHookClosure(object):
    def __init__(self):
        self.opaque = None
        self.functions = {}



class EchoServer(object):

    def __init__(self, poller, use_ipv6, address, port):
        self.context_ = LIBNEUBOT.NeubotEchoServer_construct(poller.context_,
          use_ipv6, address, port)
        if not self.context_:
            DIE(1)
        _ctypes.Py_INCREF(self)



class Pollable(object):

    def handle_read(self):
        pass

    def handle_write(self):
        pass

    def handle_error(self):
        pass

    def __init__(self, poller):
        self.context_ = LIBNEUBOT.NeubotPollable_construct(poller.context_,
          NEUBOTPOLLABLE_HANDLE_READ_SLOT_VO,
          NEUBOTPOLLABLE_HANDLE_WRITE_SLOT_VO,
          NEUBOTPOLLABLE_HANDLE_ERROR_SLOT_VO, self)
        if not self.context_:
            DIE(1)
        _ctypes.Py_INCREF(self)

    def attach(self, filenum):
        return LIBNEUBOT.NeubotPollable_attach(self.context_, filenum)

    def detach(self):
        LIBNEUBOT.NeubotPollable_detach(self.context_)

    def get_fileno(self):
        return LIBNEUBOT.NeubotPollable_get_fileno(self.context_)

    def set_readable(self):
        return LIBNEUBOT.NeubotPollable_set_readable(self.context_)

    def unset_readable(self):
        return LIBNEUBOT.NeubotPollable_unset_readable(self.context_)

    def set_writable(self):
        return LIBNEUBOT.NeubotPollable_set_writable(self.context_)

    def unset_writable(self):
        return LIBNEUBOT.NeubotPollable_unset_writable(self.context_)

    def set_timeout(self, delta):
        LIBNEUBOT.NeubotPollable_set_timeout(self.context_, delta)

    def clear_timeout(self):
        LIBNEUBOT.NeubotPollable_clear_timeout(self.context_)

    def close(self):
        if not self.context_:
            return
        _ctypes.Py_DECREF(self)
        LIBNEUBOT.NeubotPollable_close(self.context_)
        self.context_ = None



class Poller(object):

    def __init__(self):
        self.context_ = LIBNEUBOT.NeubotPoller_construct()
        if not self.context_:
            DIE(1)
        _ctypes.Py_INCREF(self)

    def sched(self, delta, callback, opaque):

        closure = NeubotHookClosure()
        closure.functions['callback'] = callback
        closure.opaque = opaque
        _ctypes.Py_INCREF(closure)

        return LIBNEUBOT.NeubotPoller_sched(self.context_, delta,
          NEUBOTPOLLER_SCHED_CALLBACK_HOOK_VO, closure)

    def defer_read(self, fileno, handle_ok, handle_timeout, opaque, timeout):

        closure = NeubotHookClosure()
        closure.functions['handle_ok'] = handle_ok
        closure.functions['handle_timeout'] = handle_timeout
        closure.opaque = opaque
        _ctypes.Py_INCREF(closure)

        return LIBNEUBOT.NeubotPoller_defer_read(self.context_, fileno,
          NEUBOTPOLLER_DEFER_READ_HANDLE_OK_HOOK_VO,
          NEUBOTPOLLER_DEFER_READ_HANDLE_TIMEOUT_HOOK_VO, closure, timeout)

    def defer_write(self, fileno, handle_ok, handle_timeout, opaque,
          timeout):

        closure = NeubotHookClosure()
        closure.functions['handle_ok'] = handle_ok
        closure.functions['handle_timeout'] = handle_timeout
        closure.opaque = opaque
        _ctypes.Py_INCREF(closure)

        return LIBNEUBOT.NeubotPoller_defer_write(self.context_, fileno,
          NEUBOTPOLLER_DEFER_WRITE_HANDLE_OK_HOOK_VO,
          NEUBOTPOLLER_DEFER_WRITE_HANDLE_TIMEOUT_HOOK_VO, closure, timeout)

    def resolve(self, family, name, callback, opaque):

        closure = NeubotHookClosure()
        closure.functions['callback'] = callback
        closure.opaque = opaque
        _ctypes.Py_INCREF(closure)

        return LIBNEUBOT.NeubotPoller_resolve(self.context_, family, name,
          NEUBOTPOLLER_RESOLVE_CALLBACK_HOOK_VOS, closure)

    def loop(self):
        LIBNEUBOT.NeubotPoller_loop(self.context_)

    def break_loop(self):
        LIBNEUBOT.NeubotPoller_break_loop(self.context_)

